fix overflow problems

--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* TODO: Fix overflows. (idk how btw) */
-
 .CodeMirror {
 	width: 100%;
 	height: max-content;
@@ -7,6 +5,7 @@
 	font-size: 1.2rem;
 	line-height: 1.7rem;
 	height: 75vh !important;
+	border-radius: 0.2rem !important;
 }
 
 #text-editor {
@@ -47,12 +46,19 @@
 
 #path-container .label {
 	font-weight: bold;
-
 }
 
 #path-container .value {
 	margin-left: 0.4rem;
+	max-height: 1.6rem;
+	line-height: 1.6rem;
+	padding: 0 0.4rem;
+	border-radius: 0.2rem;
+	word-break: break-all;
+	overflow: auto;
 	font-family: "Lucida Console", Monaco, monospace;
+	background-color: #646464;
+	width: 100%;
 }
 
 #path-container button {
